# VoxCPM.cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  NOTICE  README.cuda.md  README.md  README_zh.md  VOXCPM_RUNTIME_REFACTOR_PLAN_zh.md
.codex/skills/voxcpm-runtime-migration-guard/: SKILL.md
.codex/skills/voxcpm-runtime-migration-guard/agents/: openai.yaml
.codex/skills/voxcpm-runtime-migration-guard/references/: core-docs.md  metrics-and-guardrails.md
.codex/skills/voxcpm-runtime-migration-guard/scripts/: audit-runtime-boundaries.sh
benchmark/: CMakeLists.txt
docs/: voxcpm_runtime_optimization_report_zh.md
examples/: CMakeLists.txt  voxcpm_imatrix.cpp  voxcpm_tts.cpp
include/voxcpm/: audio-vae.h  audio_io.h  backend.h  components.h  config.h  context.h  graph-cache.h  locdit.h  output.h  runtime.h  server_common.h  state.h  voxcpm.h
scripts/: convert_voxcpm_to_gguf.py  export_quantized_weights.sh
servers/: voxcpm_server.cpp
src/: audio-vae.cpp  audio_io.cpp  backend.cpp  components.cpp  context.cpp  graph-cache.cpp  locdit.cpp  minicpm.cpp  output.cpp  quantize.cpp  runtime.cpp  server_common.cpp  state.cpp  unified_cfm.cpp  voxcpm.cpp
tests/: CMakeLists.txt  test_audio_vae.cpp  test_config.h  test_locdit.cpp  test_minicpm.cpp  test_quantize.cpp  test_runtime_skeleton.cpp  test_server_common.cpp
